; ;  Uncomment to generate multicodec then reformat

; (executable
;  (name gen)
;  (modules gen)
;  (libraries fmt))

; (rule
;  (deps
;   gen.exe
;   (file vendor/multibase/multibase.csv))
;  (targets encoding.ml encoding.mli)
;  (mode promote)
;  (action
;   (progn
;    (with-stdout-to
;     encoding.ml
;     (run ./gen.exe ml))
;    (with-stdout-to
;     encoding.mli
;     (run ./gen.exe mli)))))

(library
 (name multibase)
 (modules base58 multibase s encoding)
 (public_name multibase)
 (libraries base64 base64.base32))
